cabal-version: >=1.10
name: reader-warp
version: 0.1.0.0
license: BSD3
license-file: LICENSE
maintainer: wroathe@gmail.com
author: Justin Christensen
build-type: Simple
extra-source-files:
    CHANGELOG.md

executable reader-warp
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -threaded -Wall -with-rtsopts=-N
    build-depends:
        base >=4.11 && <4.12,
        mtl -any,
        wai -any,
        warp -any,
        fast-logger -any,
        containers -any
